M-00 : Push 03 : ex01 : ADD et EXIT fonctionnels

--- a/module-00/ex01/Makefile
+++ b/module-00/ex01/Makefile
@@ -1,6 +1,8 @@
-NAME = megaphone
+NAME = myawesomephonebook
 
-SRCS = megaphone.cpp
+SRCS = main.cpp \
+		Contact.class.cpp \
+		PhoneBook.class.cpp \
 
 OBJSRCS = $(SRCS:.cpp=.o)
 
