M-01 : Push 22 : ex00 quasiment finit. push fin de journee

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,9 @@
 		"cwctype": "cpp",
 		"cstdlib": "cpp",
 		"initializer_list": "cpp",
-		"string_view": "cpp"
+		"string_view": "cpp",
+		"cmath": "cpp",
+		"cstdio": "cpp",
+		"limits": "cpp"
 	}
 }
