M-XX : Push 23 : ajout du flag std-98 dans les makefile.

--- a/module-01/ex05/Makefile
+++ b/module-01/ex05/Makefile
@@ -7,7 +7,7 @@ OBJSRCS = $(SRCS:.cpp=.o)
 
 CC = c++
 
-CFLAGS = -Wall -Wextra -Werror #-std=c++98
+CFLAGS = -Wall -Wextra -Werror -std=c++98
 
 $(NAME): $(OBJSRCS)
 	$(CC) $(CFLAGS) $(OBJSRCS) -o $(NAME)
