M-06 : Push 40 : ex00 finit. A VERIFIER EN ENTIER. push fin de journee

--- a/module-06/ex00/Makefile
+++ b/module-06/ex00/Makefile
@@ -2,6 +2,10 @@ NAME =   convert
 
 SRCS = main.cpp \
 		isSomeThing.cpp \
+		char.cpp \
+		int.cpp \
+		float.cpp \
+		double.cpp \
 
 OBJSRCS = $(SRCS:.cpp=.o)
 
