--- a/module-04/ex01/Makefile
+++ b/module-04/ex01/Makefile
@@ -10,7 +10,7 @@ OBJSRCS = $(SRCS:.cpp=.o)
 
 CC = c++
 
-CFLAGS = -Wall -Wextra -Werror -std=c++98 -g3
+CFLAGS = -Wall -Wextra -Werror -std=c++98
 
 $(NAME): $(OBJSRCS)
 	$(CC) $(CFLAGS) $(OBJSRCS) -o $(NAME)
