--- a/module-09/ex02/Makefile
+++ b/module-09/ex02/Makefile
@@ -7,7 +7,7 @@ OBJSRCS = $(SRCS:.cpp=.o)
 
 CC = c++
 
-CFLAGS = -Wall -Wextra -Werror -std=c++98
+CFLAGS = -Wall -Wextra -Werror -std=c++98 -g -g3
 
 $(NAME): $(OBJSRCS)
 	$(CC) $(CFLAGS) $(OBJSRCS) -o $(NAME)
